Refactor layouts and improve search functionality
Reorganized the MainLayout header and navigation components. Improved the SearchView's filtering and sorting functionality, and refined map handling.